book/tests/snapshots/snapshot__run_reference_prql@internals__name-resolving-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/internals/name-resolving-0.prql
---
SELECT
  first_name
FROM
  employees
