book/tests/snapshots/snapshot__run_reference_prql@internals__name-resolving-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/internals/name-resolving-1.prql
---
SELECT
  employees.first_name,
  d.title,
  created_at
FROM
  employees
  JOIN departments AS d ON employees.dept_id = d.dept_id
